--- a/src/templates/post.html
+++ b/src/templates/post.html
@@ -1,31 +1,9 @@
 <div class="postContainer replyContainer" id="pc{{this.no}}">
     <div class="sideArrows" id="sa{{this.no}}">&gt;&gt;</div>
     <div id="p{{this.no}}" class="post reply">
-        <div class="postInfoM mobile" id="pim{{this.no}}"> 
-            <span class="nameBlock {{#if this.capcode}}capcodeMod{{/if}}"
-            ><span class="name{{#if this.capcode}} capcode{{/if}}">{{this.name}}</span
-            >{{#if this.trip}}<span class="postertrip"> {{this.trip}}</span
-            >{{/if}}{{#unless this.capcode}}{{#if this.id}} <span class="posteruid id_{{this.id}}">(ID: <span class="hand" title="Highlight posts by this ID" style="{{id_color this.id}}">{{this.id}}</span>)</span
-            >{{/if}}{{/unless}} {{#if this.capcode}}<strong class="capcode hand id_{{this.capcode}}" title="Highlight posts by Moderators">## {{this.id}}</strong
-            > <img src="/static/image/modicon.gif" alt="Mod Icon" title="This user is a 4chan Moderator." class="identityIcon retina"
-            >{{/if}}{{#if this.since4pass}} <span title="Pass user since {{this.since4pass}}" class="n-pu"></span
-            >{{/if}}<br></span>
-            <span class="dateTime postNum" data-utc="{{this.time}}">{{this.now}}<a href="#p{{this.no}}" title="Link to this post">No.</a><a href="#p{{this.no}}" title="Reply to this post">{{this.no}}</a></span>
-        </div>
-        <div class="postInfo desktop" id="pi{{this.no}}"><input type="checkbox" name="{{this.no}}" value="delete">
-            <span class="nameBlock {{#if this.capcode}}capcodeMod{{/if}}"
-            ><span class="name{{#if this.capcode}} capcode{{/if}}">{{this.name}}</span
-            >{{#if this.trip}}<span class="postertrip"> {{this.trip}}</span
-            >{{/if}}{{#unless this.capcode}}{{#if this.id}} <span class="posteruid id_{{this.id}}">(ID: <span class="hand" title="Highlight posts by this ID" style="{{id_color this.id}}">{{this.id}}</span>)</span
-            >{{/if}}{{/unless}}{{#if this.capcode}} <strong class="capcode hand id_{{this.capcode}}" title="Highlight posts by Moderators">## {{this.id}}</strong
-            > <img src="/static/image/modicon.gif" alt="Mod Icon" title="This user is a 4chan Moderator." class="identityIcon retina"
-            >{{/if}}{{#if this.since4pass}} <span title="Pass user since {{this.since4pass}}" class="n-pu"></span> {{/if}}</span> 
-            <span class="dateTime" data-utc="{{this.time}}">{{this.now}}</span> 
-            <span class="postNum desktop"><a href="#p{{this.no}}" title="Link to this post">No.</a><a href="#p{{this.no}}" title="Reply to this post">{{this.no}}</a></span>
-        </div>
+        {{> post_info_mobile this}}
+        {{> post_info_desktop this}}
         {{> post_file this}}
-        <blockquote class="postMessage" id="m{{this.no}}">
-            {{{this.com}}}
-        </blockquote>
+        <blockquote class="postMessage" id="m{{this.no}}">{{{this.com}}}</blockquote>
     </div>
 </div>
