Add country flag support

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -12,6 +12,7 @@
 <link rel="alternate stylesheet" style="text/css" href="/static/css/burichannew.699.css" title="Burichan New">
 <link rel="alternate stylesheet" style="text/css" href="/static/css/photon.699.css" title="Photon">
 <link rel="alternate stylesheet" style="text/css" href="/static/css/tomorrow.699.css" title="Tomorrow">
+<link rel="stylesheet" href="/static/css/flags.689.css">
 <link rel="stylesheet" href="/static/css/yotsubluemobile.699.css">
 <style type="text/css">.posteruid .hand {padding: 0 5px; border-radius: 6px; font-size: 0.8em;}</style>
 
