--- a/src/templates/post_info_desktop.html
+++ b/src/templates/post_info_desktop.html
@@ -4,7 +4,8 @@
     ><span class="name{{#if capcode}} capcode{{/if}}">{{name}}</span
     >{{#if trip}}<span class="postertrip"> {{trip}}</span
     >{{/if}}{{#unless capcode}}{{#if id}} <span class="posteruid id_{{id}}">(ID: <span class="hand" title="Highlight posts by this ID" style="{{id_color id}}">{{id}}</span>)</span
-    >{{/if}}{{/unless}}{{#if capcode}} <strong class="capcode hand id_mod" title="Highlight posts by Moderators">## {{id}}</strong
+    >{{/if}}{{/unless}}{{#if country}} <span title="{{country_name}}" class="flag flag-{{to_lower_case country}}"></span
+    >{{/if}}{{#if capcode}} <strong class="capcode hand id_mod" title="Highlight posts by Moderators">## {{id}}</strong
     > <img src="/static/image/modicon.gif" alt="Mod Icon" title="This user is a 4chan Moderator." class="identityIcon retina"
     >{{/if}}{{#if since4pass}} <span title="Pass user since {{since4pass}}" class="n-pu"></span>{{/if}}</span>
     <span class="dateTime" data-utc="{{time}}">{{now}}</span>
