Add board index page

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="/static/css/flags.689.css">
 <link rel="stylesheet" href="/static/css/yotsubluemobile.699.css">
 <style type="text/css">.posteruid .hand {padding: 0 5px; border-radius: 6px; font-size: 0.8em;}</style>
-
+{{> index_css}}
 <title>{{> page_title}} - Mitsuba Archive</title>
 
 <script type="text/javascript">
