--- a/src/templates/thread.html
+++ b/src/templates/thread.html
@@ -6,7 +6,7 @@
     {{> board_header}}
     <hr class="desktop" id="op">
     <div class="navLinks desktop">
-        [<a href="/{{op.board}}/" accesskey="a">Return</a>] [<a href="/{{op.board}}/catalog">Catalog</a>] [<a href="#bottom">Bottom</a>]<div class="thread-stats"><span class="ts-replies" data-tip="Replies">{{op.replies}}</span> / <span class="ts-images" data-tip="Images">{{op.images}}</span> / <span data-tip="Posters" class="ts-ips">{{op.unique_ips}}</span></div>
+        [<a href="/{{op.board}}/1" accesskey="a">Return</a>] [<a href="#bottom">Bottom</a>]<div class="thread-stats"><span class="ts-replies" data-tip="Replies">{{op.replies}}</span> / <span class="ts-images" data-tip="Images">{{op.images}}</span> / <span data-tip="Posters" class="ts-ips">{{op.unique_ips}}</span></div>
     </div>
     <hr>
     <form name="delform" id="delform" method="post">
