Boards nav added

--- a/src/templates/board_header.html
+++ b/src/templates/board_header.html
@@ -1,5 +1,5 @@
 <span id="id_css"></span>
-<span id="navtopright">[<a href="javascript:void(0);" id="settingsWindowLink">Settings</a>]</span>
+{{> boards_list}}
 <div id="boardNavMobile" class="mobile">
     <div class="boardSelect"> <strong>Board</strong> <select id="boardSelectMobile"></select> </div>
     <div class="pageJump"> <a href="#bottom">&#9660;</a> <a href="javascript:void(0);" id="settingsWindowLinkMobile">Settings</a> <a href="/" target="_top">Home</a> </div>
