Go to post form

--- a/src/templates/index_page.html
+++ b/src/templates/index_page.html
@@ -7,7 +7,7 @@
     {{> board_header}}
 
     <div id="ctrl-top" class="desktop"><hr>
-        <input type="text" id="search-box" placeholder="Search OPs…">
+        {{> go_to_post}}
     </div>
     <hr>
     <form name="delform" id="delform" method="post">
