--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -9,7 +9,9 @@
     {{> board_header}}
     <div id="content" class="desktop">
         <div id="ctrl-top" class="desktop"><hr>
+            {{> go_to_post}}
         </div>
+        <hr>
     </div>
     <div id="threads" class="extended-small" contextmenu="ctxmenu-thread">
         {{#each posts}}
