--- a/src/templates/index_page.html
+++ b/src/templates/index_page.html
@@ -8,6 +8,7 @@
 
     <div id="ctrl-top" class="desktop"><hr>
         {{> go_to_post}}
+        {{> text_search_field}}
     </div>
     <hr>
     <form name="delform" id="delform" method="post">
