Go to specific posts

--- a/src/templates/go_to_post.html
+++ b/src/templates/go_to_post.html
@@ -20,7 +20,7 @@
                 thread_id = data.no;
             }
             console.log(thread_id);
-            window.location = "/"+board+"/thread/"+thread_id
+            window.location = "/"+board+"/thread/"+thread_id+"#p"+id;
         });
     }
     let el = document.getElementById('go-box');
