--- a/src/templates/go_to_post.html
+++ b/src/templates/go_to_post.html
@@ -1,6 +1,6 @@
 <input type="text" id="go-box" placeholder="Go to Post/Thread ID (Enter)"><select name="go-board-choice" id="go-board-choice">
     {{#each boards}}
-        <option {{#if (eq this.name ../op.board)}}selected{{/if}} value="{{name}}">/{{name}}/</option>
+        <option {{#if (eq this.name ../board)}}selected{{/if}} value="{{name}}">/{{name}}/</option>
     {{/each}}
 </select>
 <script>
