--- a/src/templates/thread.html
+++ b/src/templates/thread.html
@@ -1,12 +1,12 @@
-{{#*inline "page_title"}}/{{op.board}}/ - {{#if op.sub}}{{shorten 25 op.sub}}{{else}}{{shorten 25 op.com}}{{/if}}{{/inline}}
-{{#*inline "page_content"}}{{shorten 25 op.sub}} - /{{op.board}}/{{/inline}}
-{{#*inline "page_board"}}{{op.board}}{{/inline}}
+{{#*inline "page_title"}}/{{board}}/ - {{#if op.sub}}{{shorten 25 op.sub}}{{else}}{{shorten 25 op.com}}{{/if}}{{/inline}}
+{{#*inline "page_content"}}{{shorten 25 op.sub}} - /{{board}}/{{/inline}}
+{{#*inline "page_board"}}{{board}}{{/inline}}
 {{#*inline "page_body"}}
-<body class="is_thread board_{{op.board}}">
+<body class="is_thread board_{{board}}">
     {{> board_header}}
     <hr class="desktop" id="op">
     <div class="navLinks desktop">
-        [<a href="/{{op.board}}/1" accesskey="a">Return</a>] [<a href="#bottom">Bottom</a>]<div class="thread-stats"><span class="ts-replies" data-tip="Replies">{{op.replies}}</span> / <span class="ts-images" data-tip="Images">{{op.images}}</span> / <span data-tip="Posters" class="ts-ips">{{op.unique_ips}}</span></div>
+        [<a href="/{{board}}/1" accesskey="a">Return</a>] [<a href="#bottom">Bottom</a>]<div class="thread-stats"><span class="ts-replies" data-tip="Replies">{{op.replies}}</span> / <span class="ts-images" data-tip="Images">{{op.images}}</span> / <span data-tip="Posters" class="ts-ips">{{op.unique_ips}}</span></div>
     </div>
     <hr>
     <form name="delform" id="delform" method="post">
@@ -18,7 +18,7 @@
                 {{/each}}
             </div>
             <hr>
-            <div class="navLinks navLinksBot desktop">[<a href="/{{op.board}}/" accesskey="a">Return</a>] [<a href="/{{op.board}}/catalog">Catalog</a>] [<a href="#top">Top</a>] </div>
+            <div class="navLinks navLinksBot desktop">[<a href="/{{board}}/" accesskey="a">Return</a>] [<a href="/{{board}}/catalog">Catalog</a>] [<a href="#top">Top</a>] </div>
             <hr class="desktop">
         </div>
     </form>
