--- a/src/templates/post_info_mobile.html
+++ b/src/templates/post_info_mobile.html
@@ -8,5 +8,5 @@
     > <img src="/static/image/modicon.gif" alt="Mod Icon" title="This user is a 4chan Moderator." class="identityIcon retina"
     >{{/if}} {{#if since4pass}} <span title="Pass user since {{since4pass}}" class="n-pu"></span
     >{{/if}}<br>{{#if sub}}<span class="subject">{{sub}}</span>{{/if}} </span
-    ><span class="dateTime postNum" data-utc="{{time}}">{{now}} <a href="#p{{no}}" title="Link to this post">No.</a><a href="#p{{no}}" title="Reply to this post">{{no}}</a></span>
+    ><span class="dateTime postNum" data-utc="{{time}}">{{now}} <a href="/{{board}}/thread/{{#if (eq resto 0)}}{{no}}{{else}}{{resto}}{{/if}}#p{{no}}" title="Link to this post">No.</a><a href="/{{board}}/thread/{{#if (eq resto 0)}}{{no}}{{else}}{{resto}}{{/if}}#p{{no}}" title="Reply to this post">{{no}}</a></span>
 </div>
