--- a/src/templates/floating_form.html
+++ b/src/templates/floating_form.html
@@ -58,3 +58,136 @@
 
     FF.start();
 </script>
+
+<style type="text/css">
+    #quickReply {
+        display: block;
+        position: fixed;
+        padding: 2px;
+        font-size: 10pt;
+    }
+    #qrepHeader,
+    #qrHeader {
+        font-size: 10pt;
+        text-align: center;
+        margin-bottom: 1px;
+        padding: 0;
+        height: 18px;
+        line-height: 18px;
+    }
+    #qrHeader .left { float: left; margin-left: 3px; }
+    #qrepClose,
+    #qrClose {
+        float: right;
+    }
+    #qrCaptchaContainer { height: 78px; }
+    #qrForm > div {
+    clear: both;
+    }
+    #quickReply input[type="text"],
+    #quickReply textarea,
+    #quickReply #recaptcha_response_field {
+        border: 1px solid #aaa;
+        font-family: arial,helvetica,sans-serif;
+        font-size: 10pt;
+        outline: medium none;
+        width: 296px;
+        padding: 2px;
+        margin: 0 0 1px 0;
+    }
+    .tomorrow #quickReply input[type="text"],
+    .tomorrow #quickReply textarea,
+    .tomorrow #quickReply #recaptcha_response_field {
+        border: 1px solid #515151;
+        background-color: #282a2e;
+        color: #c5c8c6;
+    }
+    .tomorrow #quickReply input[type="text"]:focus,
+    .tomorrow #quickReply textarea:focus {
+        border: 1px solid #757575;
+    }
+    #quickReply textarea {
+        min-width: 296px;
+        float: left;
+    }
+    .tomorrow #quickReply input::placeholder {
+        color: 919191 !important;
+    }
+    #quickReply input[type="submit"] {
+        width: 75px;
+        margin: 0;
+        float: right;
+    }
+    #quickReply #qrCapField {
+        display: block;
+        margin-top: 1px;
+    }
+    #qrCaptchaContainer > div > div { width: 300px !important; }
+    #quickReply input.presubmit {
+        margin-right: 1px;
+        width: 212px;
+        float: left;
+    }
+    #qrFile {
+        width: 130px;
+        margin-right: 5px;
+    }
+    .yotsuba_new #qrFile {
+        color:black;
+    }
+    #qrSpoiler {
+        display: inline;
+    }
+    #qrError {
+        width: 292px;
+        display: none;
+        font-family: monospace;
+        background-color: #E62020;
+        font-size: 12px;
+        color: white;
+        padding: 3px 5px;
+        text-shadow: 0 1px rgba(0, 0, 0, 0.20);
+        clear: both;
+    }
+    #qrError a:hover,
+    #qrError a {
+        color: white !important;
+        text-decoration: underline;
+    }
+    #quickReply input[type="text"],
+    #quickReply textarea,
+    .extPanel input[type="text"],
+    .extPanel textarea {
+        font-size: 16px;
+    }
+    #quickReply {
+        position: absolute;
+        left: 50%;
+        margin-left: -154px;
+    }
+    #qrDummyFile {
+        float: left;
+        margin-right: 5px;
+        width: 220px;
+        cursor: default;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+    #qrDummyFileLabel {
+    margin-left: 3px;
+    }
+    #qr-painter-ctrl { text-align: center; }
+    #qr-painter-ctrl label { margin-right: 4px; }
+    .open-qr-wrap {
+        text-align: center;
+        width: 200px;
+        position: absolute;
+        margin-left: 50%;
+        left: -100px;
+    }
+</style>
