--- a/src/templates/thread.html
+++ b/src/templates/thread.html
@@ -23,6 +23,7 @@
         </div>
     </form>
     <div id="bottom"></div>
+    {{> mod_tools_form}}
 </body>
 {{/inline}}
 {{#*inline "extra_head"}}
