Add post moderation btn to post templates

--- a/src/templates/op_post.html
+++ b/src/templates/op_post.html
@@ -4,5 +4,6 @@
         {{> post_file op}}
         {{> post_info_desktop op}}
         <blockquote class="postMessage" id="m{{op.no}}">{{{op.com}}}</blockquote>
+        {{> post_moderation_settings op}}
     </div>
 </div>
