--- a/src/templates/post.html
+++ b/src/templates/post.html
@@ -5,5 +5,6 @@
         {{> post_info_desktop this}}
         {{> post_file this}}
         <blockquote class="postMessage" id="m{{this.no}}">{{{this.com}}}</blockquote>
+        {{> post_moderation_settings this}}
     </div>
 </div>
