--- a/src/templates/index_css.html
+++ b/src/templates/index_css.html
@@ -1,3 +1,9 @@
 <style type="text/css">
+    .hidden-user {
+        display: none;
+    }
+    .unhide-btn {
+        margin-left: 5px
+    }
 </style>
 <link rel="stylesheet" type="text/css" href="/static/css/index.css"/>
